--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@react-vant/icons": "^0.0.10",
     "antd": "^5.11.1",
     "lunar-calendar": "^0.1.4",
     "qrcode.react": "^3.1.0",
