--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qrcode-reader": "^2.3.11",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-vant": "^3.3.2",
